--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,13 +1,14 @@
 <%= form_for @recipe do |f| %>
+
   <%= f.label "Recipe title:" %>
-  <%= f.text_field :title %><br/>
+  <%= f.text_field :title %>
 
   <%= f.fields_for :ingredients do |inner_form| %>
     <%= inner_form.label :name %>
-    <%= inner_form.text_field :name %><br/>
+    <%= inner_form.text_field :name %>
 
     <%= inner_form.label :quantity %>
-    <%= inner_form.text_field :quantity %><br/>
+    <%= inner_form.text_field :quantity %>
   <% end %>
 
   <%= f.submit %>
